# linopt

./: .gitignore  pyproject.toml
common/tests/: test_netlib_problems.py
docs/: forrest_tomlin_profile.md
ipm/: README.md  pyproject.toml
ipm/src/ipm/: ipm_tools.py  predictor_corrector.py
linopt-cpp/linopt_native/: CMakeLists.txt  pyproject.toml
linopt-cpp/linopt_native/cpp/include/linopt_native/: dual_simplex.hpp  ipm_tools.hpp  pivot_strategy.hpp  predictor_corrector.hpp  primal_simplex.hpp  simplex_utils.hpp  solvers.hpp  types.hpp
linopt-cpp/linopt_native/cpp/src/: bindings.cpp  dual_simplex.cpp  ipm_tools.cpp  pivot_strategy.cpp  predictor_corrector.cpp  primal_simplex.cpp  simplex_utils.cpp
linopt-cpp/linopt_native/cpp/tests/: test_ipm.cpp  test_simplex.cpp
linopt-cpp/linopt_native/src/linopt_native/: __init__.py
linopt-cpp/linopt_native/tests/: test_public_dispatch.py
linopt_native/: CMakeLists.txt  pyproject.toml
linopt_native/cpp/include/linopt_native/: solvers.hpp
linopt_native/cpp/src/: bindings.cpp  ipm.cpp  simplex.cpp
linopt_native/cpp/tests/: test_ipm.cpp  test_simplex.cpp
linopt_native/src/linopt_native/: __init__.py
linopt_native/tests/: test_public_dispatch.py
pdhg/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
pdhg/src/: linear_algebra.cpp  linear_algebra.h  metal_details.cpp  metal_details.h
pdhg/tests/: test_linear_algebra.cpp  test_metal_details.cpp
simplex/: README.md  forrest_tomlin_update_notes.md  pyproject.toml
simplex/src/: simplex_util.py
simplex/src/simplex/: dual_simplex.py  linear_algebra.py  pivoting_strategy.py  primal_simplex.py
simplex/tests/: conftest.py  test_simplex.py
