[project]
name = "linopt-native"
version = "0.1.1"
description = "Private native acceleration routines for linopt"
requires-python = ">=3.13"
dependencies = ["numpy>=2.4.1"]

[build-system]
requires = ["scikit-build-core>=0.11.0", "pybind11>=3.0.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/linopt_native"]

[dependency-groups]
test = ["pytest>=9.0.2"]
